# brittle-user-tokens

./: .gitattributes  .gitignore  README.md  env.sh  pyproject.toml  requirements.txt
configs/: chat_sycophancy.yaml  default.yaml  persona_contagion.yaml  qwen0_5b.yaml  qwen1_5b.yaml  qwen3b.yaml  refusal_boundary.yaml  safety_erosion.yaml
results/generations/: arc_sycophancy__assertive__seed0__test-assertive.jsonl  arc_sycophancy__assertive__seed0__test-original.jsonl  arc_sycophancy__assertive__seed0__test-polite_deferential.jsonl  arc_sycophancy__assertive__seed1__test-assertive.jsonl  arc_sycophancy__assertive__seed1__test-original.jsonl  arc_sycophancy__assertive__seed1__test-polite_deferential.jsonl  arc_sycophancy__assertive__seed2__test-assertive.jsonl  arc_sycophancy__assertive__seed2__test-original.jsonl  arc_sycophancy__assertive__seed2__test-polite_deferential.jsonl  arc_sycophancy__base__seed0__test-assertive.jsonl  arc_sycophancy__base__seed0__test-original.jsonl  arc_sycophancy__base__seed0__test-polite_deferential.jsonl  arc_sycophancy__base_direct__seed0__test-assertive.jsonl  arc_sycophancy__base_direct__seed0__test-original.jsonl  arc_sycophancy__base_direct__seed0__test-polite_deferential.jsonl  arc_sycophancy__declarative__seed0__test-assertive.jsonl  arc_sycophancy__declarative__seed0__test-original.jsonl  (+43 more)
scripts/: 01_build_dataset.py  02_make_transforms.py  03_train.py  04_generate_eval.py  05_judge.py  06_analyze.py  eval_base_sizes.sh  rerun_neutral_base.sh  run_all.sh  run_chat.sh  setup_workspace.sh
tests/: test_config.py  test_judge.py  test_masking.py  test_metrics.py  test_multiturn.py  test_naming.py  test_transforms.py
(+406 files in other folders)
